--- a/index.html
+++ b/index.html
@@ -1,7 +1,54 @@
 <!DOCTYPE html>
-<html>
+
+
+<head>
+<style>
+header {
+	font-size: 200;
+	text-align: center;
+	background: url('http://dash.ga.co/assets/jeff-bg.png');
+	background-size: cover;
+	color: white;
+
+}
+a {
+	color: white;
+}
+h1 {
+	font-size: 70px;
+}
+img {
+	margin:40px 0px 0px 0px;
+	border: 7px solid white;
+	border-radius: 20px;
+
+}
+ul {
+	padding: 10px;
+	background: rgba(0,0,0,0.5);
+}
+li {
+	display:inline;
+	padding: 0px 10px 0px 10px;
+}
+p {
+	font-size: 50px;
+	text-align: center;
+}
+</style>
+<head>
 <body>
-<h1>Hello World</h1>
-<p>I’m hosted with GitHub Pages.</p>
+
+<header>
+	<img src="http://fmn.rrimg.com/fmn060/20120618/1005/original_bYTl_56e30000008d118f.jpg">
+<h1>Joanna Wang</h1>
+<ul>
+	<li><a href="about me.html">About me</a></li>
+	<li><a href="My experience.html">My experience</a></li>
+	<li><a href="Contact me.html">Contact me</a></li>
+</ul>
+
+</header>
+
+<p>Hello, my name is Joanna Wang. </p>
 </body>
-</html>
