--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ img {
 	margin:40px 0px 0px 0px;
 	border: 7px solid white;
 	border-radius: 20px;
+	width: 250px;
+	height: 250px;
 
 }
 ul {
@@ -40,7 +42,7 @@ p {
 <body>
 
 <header>
-	<img src="http://fmn.rrimg.com/fmn060/20120618/1005/original_bYTl_56e30000008d118f.jpg">
+	<img src="http://pic.58pic.com/58pic/11/60/21/66Y58PICG2I.jpg">
 <h1>Joanna Wang</h1>
 <ul>
 	<li><a href="about me.html">About me</a></li>
